2005-02-10  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityException.cs: Show more information when a SecurityException
	occurs to help debugging.
	* SecurityManager.cs: Reworked LinkDemand implementation. Supply more
	informations when throwing a SecurityException for LinkDemand.
	* PermissionSet.cs: Remove (now) unused code for LinkDemand.

2005-02-08  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager.cs: Updated code for LinkDemand (and it's special
	cases).

2005-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeAccessPermission.cs: Process Deny for empty PermissionSet (e.g.
	an unrestricted permission set must deny all permissions).
	* SecurityException.cs: Added missing HResult to NET_2_0 constructors.
	Added securiy permissions for GrantedSet, RefusedSet and 
	PermissionState properties (to avoid leaking policy informations). 
	Make sure that ToString() always works.
	* SecurityManager.cs: Remove outdated comments (now that the 
	declarative attributes are in place).

2005-01-25  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager.cs: Now use Environment.InternalGetFolderPath to
	avoid recursion when initializing security policies.

2005-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeAccessPermission.cs: Made ThrowSecurityException static so it 
	can be reused from PermissionSet.
	* SecurityManager.cs: Use the new icalls for SecurityEnabled and
	CheckExecutionRights properties. Fix IsGranted for unrestricted 
	permissions. Set type correctly when loading policy files.
	* PermissionSet.cs: Now supports unrestricted permission set when
	evaluating demands.

2005-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityFrame.cs: Keep RuntimeDeclSecurityEntry enum in sync with
	runtime (added index to allow AOT to work with declarative security).

2005-01-19  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager.cs: Fix the regressions on NET_1_1 introduced by my
	refactoring 10 days ago.
